# tdc-rust-async-presentation

./: .gitignore  Cargo.toml  Makefile  README.md  add_slide.bash  build.rs  last_slide.bash  move_slide.bash  notes.md  remove_slide.bash
client/: Cargo.toml  index.html
client/src/: main.rs
docker/: Dockerfile
server/: Cargo.toml  build.rs
server/src/: main.rs
slides/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  46.html  (+14 more)
slides/en/: 1.html  10.html  11.html  12.html  13.html  15.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  45.html  46.html  47.html  48.html  (+17 more)
slides/pt/: 11.html  13.html  14.html  17.html  2.html  20.html  22.html  23.html  24.html  30.html  32.html  33.html  36.html  4.html  42.html  47.html  48.html  5.html  53.html  54.html  58.html  61.html
src/: client.rs
static/: index.html  notes.css  slides.css
