[package]
name = "server"
version = "0.1.0"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]

[dependencies]
presentrs = { git = "https://github.com/jvff/presentrs", features = ["server"] }

[build-dependencies]
presentrs = { git = "https://github.com/jvff/presentrs", features = ["server"] }
